<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <!--  menu  -->
    <string name="new_crime">New Crime</string>

    <!--  Explicit Intent String  -->
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <!--  related report  -->
    <string name="crime_report" translatable="false">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved.</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_subject">there is no suspect.</string>
    <string name="crime_report_subject">The suspect is %s.</string>
    <string name="send_report">Send crime report via</string>
</resources>